# NumC

./: .gitignore  CMakeLists.txt  NumC.h  README.md  README_CN.md  TUTORIAL.md  TUTORIAL_CN.md  test_single  test_single.c
examples/: 01_basic_creation  01_basic_creation.c  02_arithmetic  02_arithmetic.c  03_matrix_ops  03_matrix_ops.c  04_math_functions  04_math_functions.c  05_reductions  05_reductions.c  06_array_creation  06_array_creation.c  07_array_manipulation  07_array_manipulation.c  08_random_comparison  08_random_comparison.c  09_fixed_point  09_fixed_point.c  CMakeLists.txt  simple.c
include/: NumC.h
src/: NumC.c
tests/: CMakeLists.txt  array_shape_performance.md  array_with_numc  array_with_numc.c  array_without_numc  array_without_numc.c  comparison.md  performance_comparison  performance_comparison.c  test_numc.c
